--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-speedometer": "^0.1.2",
