--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "vite --port 8000",
+    "start": "vite --port 8000 --host 0.0.0.0",
     "build": "vite build",
     "preview": "vite preview"
   },
